--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:frontend": "vite --open",
     "dev:backend": "convex dev",
     "dev:init": "convex dev --until-success --typecheck=disable && convex dashboard",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx ",
     "preview": "vite preview"
   },
